adding userInfo endpoints
